--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid main-height">
     <div class="container-fluid">
-        <div class="bgis-card" role="region">
+        <div class="test-card" role="region">
             <div class="row">
                 <div class="col-12">
                     <h2>Project Panel</h2>
