--- a/src/app/components/search-table/search-table.component.scss
+++ b/src/app/components/search-table/search-table.component.scss
@@ -63,7 +63,7 @@ $grey-border: #B7B7B7;
                     .icon-info-circled{
                         padding-left: 0.25rem;
                     }
-                    .form-check-input[type=checkbox], .bgis-icon, div{
+                    .form-check-input[type=checkbox], .test-icon, div{
                         display: inline-block;
                     }
                 }
