--- a/src/app/components/shared/date-time-display-picker/date-time-display-picker.component.html
+++ b/src/app/components/shared/date-time-display-picker/date-time-display-picker.component.html
@@ -13,5 +13,5 @@
         class="input-x-button">
         <mat-icon>close</mat-icon>
     </button> -->
-    <i class="infield bgis-icon icon-cancel" style="position: absolute;right:25px;top: 6px;" (click)="resetDate()"></i>
+    <i class="infield test-icon icon-cancel" style="position: absolute;right:25px;top: 6px;" (click)="resetDate()"></i>
 </mat-form-field>
