--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -29,7 +29,7 @@ app-footer-action{
     height: $footer-height;
     background-color:#FFF;
 }
-bgis-modal{
+test-modal{
     position: fixed;
     z-index: 1100;
     background-color: rgba(0,0,0,0.5);
