--- a/src/app/components/combo-box/combo-box.component.html
+++ b/src/app/components/combo-box/combo-box.component.html
@@ -1,9 +1,9 @@
 
 <div class="form-input">
     <label *ngIf="!hideTitle" [color]="checkClass()" [ngClass]="{'has-tip' : infoTip}">{{title}}:
-        <i class="bgis-icon icon-info-1 label-info" *ngIf="infoTip" (click)="infoTipShowing()"></i>
+        <i class="test-icon icon-info-1 label-info" *ngIf="infoTip" (click)="infoTipShowing()"></i>
         <div *ngIf="infoTipShow && infoTip" class="tooltip-wrapper" (click)="infoTipShow = false">
-            {{infoTip}}<i class="bgis-icon icon-down-dir arrow-pos"></i>
+            {{infoTip}}<i class="test-icon icon-down-dir arrow-pos"></i>
         </div>
     </label> 
     <div class="input-wrapper">
@@ -12,20 +12,20 @@
         maxlength="{{maxLen}}" [disabled]="isDisabled">
         <span *ngIf="hasplaceholder" class="placeholder">Enter This First</span>
         <button aria-label="search" class="input-icon-button on-left" (click)="onClick()" *ngIf="isSearch || isFilter || isSelect || isTable || isComboCheck">
-            <i *ngIf="isSearch" class="infield bgis-icon icon-search-1"></i>
-            <i *ngIf="isFilter" class="infield bgis-icon icon-filter"></i>
-            <i *ngIf="isTable" class="infield bgis-icon icon-location-2"></i>
-            <i *ngIf="isSelect" class="infield bgis-icon icon-down-open-big" [ngStyle]="{'color': !isValid ? '#af1685': ''}"></i>
-            <i *ngIf="isComboCheck" class="infield bgis-icon icon-filter"></i>
+            <i *ngIf="isSearch" class="infield test-icon icon-search-1"></i>
+            <i *ngIf="isFilter" class="infield test-icon icon-filter"></i>
+            <i *ngIf="isTable" class="infield test-icon icon-location-2"></i>
+            <i *ngIf="isSelect" class="infield test-icon icon-down-open-big" [ngStyle]="{'color': !isValid ? '#af1685': ''}"></i>
+            <i *ngIf="isComboCheck" class="infield test-icon icon-filter"></i>
         </button>
         <button aria-label="search" class="input-icon-button on-left" style="right: 30px;" (click)="onClean()" *ngIf="isFilter || isTable">
-            <i *ngIf="isFilter" class="infield bgis-icon icon-cancel"></i>
-            <i *ngIf="isTable" class="infield bgis-icon icon-cancel" ></i>
+            <i *ngIf="isFilter" class="infield test-icon icon-cancel"></i>
+            <i *ngIf="isTable" class="infield test-icon icon-cancel" ></i>
         </button>
         <button aria-label="search" class="input-icon-button on-left" style="right: 30px;" (click)="onSelect()" *ngIf="isComboCheck">
-            <i *ngIf="isComboCheck" class="infield bgis-icon icon-down-open-big" [ngStyle]="{'color': !isValid ? '#af1685': ''}"></i>
+            <i *ngIf="isComboCheck" class="infield test-icon icon-down-open-big" [ngStyle]="{'color': !isValid ? '#af1685': ''}"></i>
         </button>
     </div>
-    <p *ngIf="!isValid" color="danger"><i class="bgis-icon icon-warning-round"></i> {{errorMessage}}</p>
+    <p *ngIf="!isValid" color="danger"><i class="test-icon icon-warning-round"></i> {{errorMessage}}</p>
 </div>
   
