--- a/src/styles/system.scss
+++ b/src/styles/system.scss
@@ -7,7 +7,7 @@ body{
     .container, .container-fluid, .container-xxl, .container-xl, .container-lg, .container-md, .container-sm{
         margin-left: 0;
     }
-    .bgis-card {
+    .test-card {
         color: #212121;
         transition: box-shadow 280ms cubic-bezier(.4,0,.2,1);
         position: relative;
