--- a/src/styles/webicons.scss
+++ b/src/styles/webicons.scss
@@ -7,7 +7,7 @@
          url('../assets/icon/webicons/v1/bgisicons.svg') format('svg');
 }
 
-.bgis-icon{
+.test-icon{
     font-family: "webicons";
     font-style: normal;
     font-weight: normal;
