Modify to match AXE check

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -25,4 +25,4 @@
         </div>
     </div>
 </div>
-<app-footer-action role="contentinfo" ></app-footer-action>
+<app-footer-action role="form" ></app-footer-action>
