--- a/src/styles/theme.scss
+++ b/src/styles/theme.scss
@@ -1,7 +1,7 @@
 $primary: #00467f;
 $warning: #FC5;
-$danger: #F00;
-$success: #7A7;
+$danger: #700;
+$success: #070;
 $theme-colors: (
     "primary": $primary,
     "warning": $warning,
